--- a/templates/proveedores/proveedores_list.html
+++ b/templates/proveedores/proveedores_list.html
@@ -443,16 +443,16 @@
                                 <input type="url" class="form-control" id="sitio_web" name="sitio_web" placeholder="https://www.ejemplo.com">
                             </div>
                             <div class="col-12">
-                                <label for="direccion" class="form-label">Dirección</label>
-                                <input type="text" class="form-control" id="direccion" name="direccion">
+                                <label for="direccion" class="form-label">Dirección <span class="text-danger">*</span></label>
+                                <input type="text" class="form-control" id="direccion" name="direccion" required>
                             </div>
                             <div class="col-12 col-md-4">
-                                <label for="ciudad" class="form-label">Ciudad</label>
-                                <input type="text" class="form-control" id="ciudad" name="ciudad">
+                                <label for="ciudad" class="form-label">Ciudad <span class="text-danger">*</span></label>
+                                <input type="text" class="form-control" id="ciudad" name="ciudad" required>
                             </div>
                             <div class="col-12 col-md-4">
-                                <label for="pais" class="form-label">País</label>
-                                <input type="text" class="form-control" id="pais" name="pais" value="Chile">
+                                <label for="pais" class="form-label">País <span class="text-danger">*</span></label>
+                                <input type="text" class="form-control" id="pais" name="pais" value="Chile" required>
                             </div>
                             <div class="col-12 col-md-4">
                                 <label for="moneda" class="form-label">Moneda</label>
